<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_path_follower</name>
  <version>0.0.1</version>
  <description>
    This package provides velocity commands to control a Turtlebot3 to follow a pre-determined path.
  </description>
  <maintainer email="david.swarbrick9@gmail.com">David Swarbrick</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
